# petektools

./: .gitignore  API.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  SPEC.md  VIEWER.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: geostat.rs  gridding.rs  store.rs
docs/: guide.md
examples/notebooks/: 01_geostat_tour.ipynb  02_synthetic_data_tour.ipynb
py/: Cargo.toml
py/src/: aggregate.rs  formula.rs  geostat.rs  grid.rs  interp.rs  lib.rs  resample.rs  sampling.rs  stats.rs  units.rs
py/src/synth/: facies.rs  georef.rs  logs.rs  mod.rs  outline.rs  petro.rs  surface.rs  wells.rs
python/petektools/: __init__.py
python/petektools/asset/: __init__.py  _config.py
python/petektools/viewer/: SCHEMA.md  __init__.py  _blocks.py  _bundle.py  _correlation.py  _save.py  _server.py  _v3.py  _view2d.py  _view3d.py  _well_style.py  _wells.py  _workspace.py  demo.py
python/petektools/viewer/assets/: decode.js  index.html  orbitcontrols.global.js  three.global.js
python/petektools/viewer/assets/viewer/: 00-app.js  05-paint-state.js  10-chrome.js  12-tooltips.js  15-workspace.js  20-map.js  30-section.js  40-volume.js  45-scene3d.js  50-wells.js  60-charts.js  70-overlays.js  72-inspector-legend.js  80-panel-boot.js
python/tests/: test_asset.py  test_boundary.py  test_formula.py  test_petektools.py  test_viewer.py  test_viewer_perf.py  test_workspace.py
python/tests/viewer_perf/: README.md  decode_bench.js  dip_bench.mjs  empty_bench.mjs  fill_selector_bench.mjs  inspect_bench.mjs  inspector_legend_bench.mjs  inspector_state_bench.js  label_bench.mjs  legend_bench.mjs  map_behavior_bench.js  map_decode_bench.js  map_rotation_bench.js  paint_race_bench.js  regular_surface_build_bench.js  render_bench.mjs  scene3d_bench.mjs  surface_attribute_build_bench.py  well_render_bench.mjs  wells_bench.mjs  workspace_bench.mjs  workspace_dual_mode_bench.js  workspace_lane_bench.mjs  workspace_scale_bench.mjs  workspace_shared_map_bench.js  workspace_state_bench.mjs  workspace_tree_design_bench.mjs  workspace_well_overlay_bench.mjs  zone_bench.mjs
scripts/: wait_for_pypi.py
src/: formula.rs  interp.rs  lib.rs
src/container/: format.rs  mod.rs
src/foundation/: error.rs  lattice.rs  mod.rs
src/geostat/: experimental.rs  fit.rs  local_kriging.rs  mod.rs  neighbourhood.rs  nscore.rs
src/geostat/sgs/: collocated.rs  mod.rs  scratch.rs  session.rs  sweep.rs  tests.rs
src/gridding/: band_lu.rs  convergent.rs  gridder.rs  idw.rs  min_curvature.rs  mincurv_operator.rs  mod.rs  nearest.rs  resample.rs
src/gridding/kriging/: mod.rs  ordinary.rs  prep.rs  solve.rs  variogram.rs
src/sampling/: aggregate.rs  distributions.rs  mod.rs  summary.rs
src/stats/: descriptive.rs  mod.rs  weighted.rs
src/store/: layout.rs  mod.rs  reader.rs  schema.rs  writer.rs
src/synth/: correlated.rs  facies.rs  georef.rs  log_series.rs  mod.rs  outline.rs  petro.rs  surface.rs  transform.rs
src/synth/wells/: mod.rs  placement.rs  tests.rs  tops.rs  trajectory.rs
src/units/: convert.rs  mod.rs
tests/: formula.rs  lattice_parity.rs  parity.rs  scatter_conditioning.rs  serde_roundtrip.rs  store_roundtrip.rs
